<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroBolaoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="60dp"
        android:id="@+id/lv3"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chegou a hora de criar o seu bolão!"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bastam duas informações e você já vai começar a apostar"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginBottom="35dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lv3"
            android:padding="2dp">
            <EditText
                android:id="@+id/nomeBolao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome do Bolão"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="14sp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lv3"
            android:padding="2dp">
            <EditText
                android:id="@+id/numeroGanhadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Número de Ganhadores"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:textSize="14sp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/register_button"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="ENVIAR"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:textStyle="normal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/button_cadastrar"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>