<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroUsuarioActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/formLogo"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:layout_below="@id/formLogo"
            android:id="@+id/lv2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="Seja bem vindo(a)!"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="Para começar, precisaremos de alguns dados básicos"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lv2"
                android:padding="2dp">
                <EditText
                    android:id="@+id/nomePessoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nome"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lv2"
                android:padding="2dp">
                <EditText
                    android:id="@+id/emailPessoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="E-mail"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lv2"
                android:padding="2dp">
                <EditText
                    android:id="@+id/senhaPessoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Senha"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_cadastrarPessoa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_button"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="CADASTRAR"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="normal" />


        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Já possui um cadastro e deseja fazer login? "
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:textSize="12sp"
        android:layout_below="@+id/lv2"
        android:id="@+id/textLogin"
        />

    <TextView
        android:id="@+id/linkCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/textLogin"
        android:text="Clique aqui"
        android:layout_below="@+id/lv2"
        android:textColor="@color/blue"
        android:textSize="12sp" />


</RelativeLayout>