<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.puc.bolaocopamundo.activity.LoginActivity">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/formLogo"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/formLogo"
            android:id="@+id/lv1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Que tal fazer uma aposta?"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Entre com os seus dados para começar"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lv1"
                android:padding="2dp">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lv1"
                android:padding="2dp">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Senha"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/register_button"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="ENTRAR"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="normal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/bt_login"/>


            <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="13dp"
                android:id="@+id/login_button"/>




        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ainda não possui um cadastro? "
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:textSize="12sp"
        android:layout_below="@+id/lv1"
        android:id="@+id/textCadastrar"
        />

    <TextView
        android:id="@+id/linkCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/textCadastrar"
        android:text="Clique aqui"
        android:layout_below="@+id/lv1"
        android:textColor="@color/blue"
        android:textSize="12sp" />


</RelativeLayout>